--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>
-    hello World
+    hello world
     </h1>
-    <p>Its always "hellow World" and never "HOW is world"</p>
+    <p>Its always "hellow world" and never "HOW is world"</p>
 </body>
 </html>
