fixed more spelling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>
     hello world
     </h1>
-    <p>Its always "hellow world" and never "HOW is world"</p>
+    <p>Its always "hello world" and never "HOW is world"</p>
 </body>
 </html>
