--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     hello world
     </h1>
     <p>Its always "hello world" and never "HOW is world"</p>
+    <img src="https://img.freepik.com/premium-vector/sad-crying-earth-get-sick-planet-earth-with-patches-bandages_709240-178.jpg?semt=ais_hybrid"
+    alt="sad earth">
+
+
 </body>
 </html>
