--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>
     hello world
     </h1>
-    <p>Its always "hello world" and never "HOW is world"</p>
+    <h2>Its always "hello world" and never "HOW is world"</h2>
     <img src="https://img.freepik.com/premium-vector/sad-crying-earth-get-sick-planet-earth-with-patches-bandages_709240-178.jpg?semt=ais_hybrid"
     alt="sad earth">
 
