added blog page

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>
-    hello world
-    </h1>
-    <h3>Its always "hello world" and never "HOW is world"</h3>
-    <img src="https://img.freepik.com/premium-vector/sad-crying-earth-get-sick-planet-earth-with-patches-bandages_709240-178.jpg?semt=ais_hybrid"
-    alt="sad earth">
-
-
-</body>
+  </head>
+  <body>
+    <h1>hello world</h1>
+    <h3>Its always "<em>hello</em> world" and never "<em>HOW</em> is world"</h3>
+    <img
+      src="https://img.freepik.com/premium-vector/sad-crying-earth-get-sick-planet-earth-with-patches-bandages_709240-178.jpg?semt=ais_hybrid"
+      alt="sad earth"
+    />
+  </body>
 </html>
