added link to blogs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="blogs.html">blogs</a>
     <h1>hello world</h1>
     <h3>Its always "<em>hello</em> world" and never "<em>HOW</em> is world"</h3>
     <img
