--- a/blogs.html
+++ b/blogs.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="blogs.html">blogs</a>
     <h1>Blog1</h1>
     <p>
         Readings: The Library of Babel, by Jorge Luis Borges (1941); A revealing look at the dot-com bubble of 2000 — and how it shapes our lives today , by Brian McCullough;Flash And Its History On The Web
@@ -37,10 +38,10 @@
         
         I want to really delve deep into the coding intricacy of html, css and javascripts. However, my main goal is to focus on understanding what makes a good UI. I found that I always struggle to make simple and user-friendly UI when making games and hence want to focus on theories and practices to male Ui easily digestible, to enhance usability and engagement 
     </p>
-    <h1>Blog2</h1>
+    <h1=id blog2>Blog2</h1>
 
     <p>
         Readings: The Library of Babel, by Jorge Luis Borges (1941); A revealing look at the dot-com bubble of 2000 — and how it shapes our lives today , by Brian McCullough;Flash And Its History On The Web</p>
-        
+
 </body>
 </html>
