Started to sort out structure

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="blogs.html">blogs</a>
+    <nav>
+        <a href="index.html">index</a>
+        <a href="blogs.html">blogs</a>
+      </nav>
+   
     <h1>Blog1</h1>
     <p>
         Readings: The Library of Babel, by Jorge Luis Borges (1941); A revealing look at the dot-com bubble of 2000 — and how it shapes our lives today , by Brian McCullough;Flash And Its History On The Web
