--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="blogs.html">blogs</a>
+    <nav>
+      <a href="index.html">index</a>
+      <a href="blogs.html">blogs</a>
+    </nav>
+    
     <h1>hello world</h1>
     <h3>Its always "<em>hello</em> world" and never "<em>HOW</em> is world"</h3>
     <img
