--- a/pages/index.html
+++ b/pages/index.html
@@ -9,12 +9,13 @@
     <nav>
       <a href="index.html">index</a>
       <a href="blogs.html">blogs</a>
+      <a href="design.htmln">design</a>
     </nav>
     
     <h1>hello world</h1>
     <h3>Its always "<em>hello</em> world" and never "<em>HOW</em> is world"</h3>
     <img
-      src="https://img.freepik.com/premium-vector/sad-crying-earth-get-sick-planet-earth-with-patches-bandages_709240-178.jpg?semt=ais_hybrid"
+      src="images/sad-earth.jpg"
       alt="sad earth"
     />
   </body>
