added footer and video

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -9,7 +9,7 @@
     <nav>
         <a href="index.html">index</a>
         <a href="blogs.html">blogs</a>
-        <a href="design.htmln">design</a>
+        <a href="design.html">design</a>
       </nav>
    
     <h1>Blog1</h1>
@@ -49,4 +49,7 @@
         Readings: The Library of Babel, by Jorge Luis Borges (1941); A revealing look at the dot-com bubble of 2000 — and how it shapes our lives today , by Brian McCullough;Flash And Its History On The Web</p>
 
 </body>
+<footer>
+    <em><small> alulu studios 2025</small> </em>
+</footer>
 </html>
