--- a/pages/design.html
+++ b/pages/design.html
@@ -9,7 +9,17 @@
     <nav>
         <a href="index.html">index</a>
         <a href="blogs.html">blogs</a>
-        <a href="design.htmln">design</a>
-      </nav>
+        <a href="design.html">design</a>
+    </nav>
+    
+        <embed
+        type="video/mp4"
+        src="../images/pepe-king.mp4"
+        width="500"
+        height="500" />
+
 </body>
+<footer>
+    <em><small> alulu studios 2025</small> </em>
+</footer>
 </html>
