--- a/pages/index.html
+++ b/pages/index.html
@@ -9,14 +9,17 @@
     <nav>
       <a href="index.html">index</a>
       <a href="blogs.html">blogs</a>
-      <a href="design.htmln">design</a>
+      <a href="design.html">design</a>
     </nav>
     
-    <h1>hello world</h1>
-    <h3>Its always "<em>hello</em> world" and never "<em>HOW</em> is world"</h3>
+    <h1>Hi im Ali</h1>
+    <h2>I'm a <em>Digital Arts Engineer</em></h2>
     <img
-      src="images/sad-earth.jpg"
-      alt="sad earth"
+      src="../images/ali.jpeg"
+      alt="sketch of Ali"
     />
   </body>
+  <footer>
+    <em><small> alulu studios 2025</small> </em>
+</footer>
 </html>
