--- a/pages/index.html
+++ b/pages/index.html
@@ -16,6 +16,8 @@
     <h2>I'm a <em>Digital Arts Engineer</em></h2>
     <img
       src="../images/ali.jpeg"
+      width="250"
+      height="250" 
       alt="sketch of Ali"
     />
   </body>
