added all footers

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -12,10 +12,12 @@
         <a href="blogs.html">blogs</a>
         <a href="design.html">design</a>
       </nav>
-
-      <li><a href="#Blog2">blog 2</a></li>
+      <hr />
+     
     <h1>Blogs</h1>
-    <h2 id=blog1>Blog 1</h2>
+    <li><a href="#Blog1">blog 1</a></li>
+    <li><a href="#Blog2">blog 2</a></li>
+    <h2 id=Blog1>Blog 1</h2>
     <p>
         Readings: The Library of Babel, by Jorge Luis Borges (1941); A revealing look at the dot-com bubble of 2000 — and how it shapes our lives today , by Brian McCullough;Flash And Its History On The Web
 
@@ -110,6 +112,7 @@
 
 </body>
 <footer>
+    <hr />
     <em><small> alulu studios 2025</small> </em>
 </footer>
 </html>
