updated file structure and placed info into other pages

--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>design page</title>
 </head>
 <body>
     <nav>
-        <a href="index.html">index</a>
-        <a href="blogs.html">blogs</a>
-        <a href="design.html">design</a>
+        <a href="../index.html">Index</a>
+        <a href="../blogsfolder/blogs.html">Blogs</a>
+        <a href="../designfolder/design.html">Design</a>
+        <a href="../devfolder/dev.html">Dev</a>
+      <a href="../profilefolder/profile.html">Profile</a>
     </nav>
     <hr />
         <embed
