--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <title>Blog page</title>
 </head>
 <body>
    
     <nav>
-        <a href="index.html">index</a>
-        <a href="blogs.html">blogs</a>
-        <a href="design.html">design</a>
-      </nav>
+        <a href="../index.html">Index</a>
+        <a href="../blogsfolder/blogs.html">Blogs</a>
+        <a href="../designfolder/design.html">Design</a>
+        <a href="../devfolder/dev.html">Dev</a>
+      <a href="../profilefolder/profile.html">Profile</a>
+    </nav>
       <hr />
      
     <h1>Blogs</h1>
