--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>homepage</title>
   </head>
   <body>
     <nav>
-      <a href="index.html">index</a>
-      <a href="blogs.html">blogs</a>
-      <a href="design.html">design</a>
+      <a href="index.html">Index</a>
+      <a href="blogsfolder/blogs.html">Blogs</a>
+      <a href="designfolder/design.html">Design</a>
+      <a href="devfolder/dev.html">Dev</a>
+      <a href="profilefolder/profile.html">Profile</a>
+
     </nav>
     <hr />
     <h1>Hi im Ali</h1>
     <h2>I'm a <em>Digital Arts Engineer</em></h2>
     <img
-      src="../images/ali.jpeg"
+      src="images/ali.jpeg"
       width="250"
       height="250" 
       alt="sketch of Ali"
