added dropdown menu to all pages

--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -50,4 +50,8 @@
     <p>
         This is a prototype of a active ragdolll. i explored the physiscs and usual whymsical nature that comes with active ragdoll games. i was particularly inspired by the game  <a href="https://store.steampowered.com/app/2383860/Octodad_Student_Edition/" target="_blank">Octodad: Dadliest Catch</a>.
 </body>
+<footer>
+  <hr />
+  <em><small> alulu studios 2025</small> </em>
+</footer>
 </html>
