--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -36,6 +36,11 @@
         <li>Unity</li>
         <li>Blender</li>
     </ul>
-    <h3
+    <datalist id="Code languages">
+        <option value="C++"></option>
+        <option value="C#"></option>
+        <option value="Java Script"></option>
+      </datalist>
+    
     </body>
 </html>
