added microformat to profile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr />
     <h1>Hi im Ali</h1>
     <h2>I'm a <em>Digital Arts Engineer</em></h2>
-    <img
+    <img class="u-photo"
       src="images/ali.jpeg"
       width="250"
       height="250" 
