--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -15,15 +15,15 @@
     </nav>
     <hr />
     <h1>Profile</h1>
-    <h2>Ali Raffee</h2>
-    <img
+    <h2 class="h-card p-name">Ali Raffee</h2>
+    <img class="u-photo"
       src="../images/ali.jpeg"
       width="250"
       height="250" 
       alt="sketch of Ali"
     />
    
-    <p>
+    <p class="p-summary">
         I am a Digital Arts Engineer who is passionate about creating interactive experiences that are engaging and immersive. I have a background in engineering, computer science and digital arts, which allows me to create projects that are both technically sound and visually appealing. I am always looking for new challenges and opportunities to learn and grow as a developer and designer.I am currently in my last year of study studying  at the University of Witwatersrand  .
     </p>
     <h2>Skills</h2>     
