updated dev page, and blogs aswell as nav

--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -9,7 +9,7 @@
     <nav>
         <a href="../index.html">Index</a>
         <a href="../blogsfolder/blogs.html">Blogs</a>
-        <a href="../designfolder/design.html">Design</a>
+        <a >Design</a>
         <a href="../devfolder/dev.html">Dev</a>
       <a href="../profilefolder/profile.html">Profile</a>
     </nav>
