--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a href="index.html">Index</a>
+      <a >Index</a>
       <a href="blogsfolder/blogs.html">Blogs</a>
       <a href="designfolder/design.html">Design</a>
       <a href="devfolder/dev.html">Dev</a>
