--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -11,7 +11,7 @@
         <a href="../blogsfolder/blogs.html">Blogs</a>
         <a href="../designfolder/design.html">Design</a>
         <a href="../devfolder/dev.html">Dev</a>
-      <a href="../profilefolder/profile.html">Profile</a>
+      <a >Profile</a>
     </nav>
     <hr />
     <h1>Profile</h1>
@@ -36,11 +36,11 @@
         <li>Unity</li>
         <li>Blender</li>
     </ul>
-    <datalist id="Code languages">
-        <option value="C++"></option>
-        <option value="C#"></option>
-        <option value="Java Script"></option>
-      </datalist>
+  
     
     </body>
+    <footer>
+      <hr />
+      <em><small> alulu studios 2025</small> </em>
+  </footer>
 </html>
