--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -9,7 +9,7 @@
    
     <nav>
         <a href="../index.html">Index</a>
-        <a href="../blogsfolder/blogs.html">Blogs</a>
+        <a >Blogs</a>
         <a href="../designfolder/design.html">Design</a>
         <a href="../devfolder/dev.html">Dev</a>
       <a href="../profilefolder/profile.html">Profile</a>
@@ -19,6 +19,8 @@
     <h1>Blogs</h1>
     <li><a href="#Blog1">blog 1</a></li>
     <li><a href="#Blog2">blog 2</a></li>
+    <li><a href="#Blog3">blog 3</a></li>
+    <li><a href="#Blog4">blog 4</a></li>
     <h2 id=Blog1>Blog 1</h2>
     <article>
     <p>
@@ -113,6 +115,101 @@
         
             
     </p>
+    </article>
+    <h2 id=Blog3>Blog 3</h2>
+    <article>
+    <p>
+        This week I focused on building the bones of my website. I focused on folder structure, traversal between pages, the functionality of jump links and implementation of images and videos. I focused on the actual html “code” this week. I found it quite different from any other languages I have used, it felt like describing what I wanted to do instead of coding (writing lines of instructions). The learning curve was not steep due to the simplistic tags and functionality that I started with. For the future of my website, it seems that my issues will mainly in the actual design and not the code to pull it off. I felt this way as I spent a disproportionate amount of time on simple text layout.
+
+I expect that the users of my website will be possible employers or colleagues. I wish to use this website as a portfolio and thus the people using my websites will be intending to learn what I have done and what I can do. I will attempt to achieve this by showcasing projects I have previously done. With this in mind, the experience I wish for the users to have must be accomplished with a website that us professional, intelligently mapped, clean and polished. My design will be focused on creating a…
+Mapping 
+The pages my portfolio will contain is a home, design, blog, profile and game dev pages. Each page will have a sticky navigation bar. I want the user to have the ability to freely access any page at any time. The home page will have minimal information but will give a brief overview of the website. I will have an interactive image that will either display an image with the words digital arts or engineering based on where the user is hovering the mouse. The image can either take the user to game dev or design based on if they click on digital arts or engineering. The blog page will have a navigation bar on the left which will have every blogs name. the user will be able to jump to any blog they select. The game dev will have descriptions of the games I want to showcase similar to my itch page. The design page will have recent electronic or software projects I wish to showcase. The profile page will house all my basic skills, interests and all of my contact information and details using a combination of images to showcase the different platforms with links to them. This will be a page dedicated to making a page to explore and sell myself.
+
+My folder structured will compose of the folders for scripts, images, styles and each page. In each page’s folders there will be folders for scripts, this will be for pages specific functionality. This structure will allow me for easy filing and expansion if necessary. 
+
+
+    </p>
+    </article>
+    <h2 id=Blog4>Blog 4</h2>
+    <article>
+        <p>
+            Looking back at the wireframes I originally created, it's clear that I was quite confused about good design practices and what I actually liked about other websites. My initial design was impractical because it didn’t even include a navigation bar . I relied on single links scattered vertically across the page to connect to other sections. Without setting a consistent structure for my website, it became difficult to navigate, and as a result, it lacked functionality.
+I wasn’t sure how to guide users through my site, so I added awkward columns at the bottom of the visible page as a poor attempt at navigation. At that stage, I didn’t yet understand the purpose of footers or how to use other visual cues that could look much cleaner and more intentional. For example, I could have used simple borders around the top and sides of the page to visually suggest scrolling, or even a transparent arrow that subtly fades downward as a gentle hint. I’ve since realized that most users naturally expect a page to be scrollable unless it's clearly shown otherwise, rather than assuming it's static.
+Another issue with my wireframes was that they included elements that weren’t actually HTML, because I wasn’t sure what should be handled with CSS, JavaScript, or HTML. This was simply due to a lack of experience at the time.
+The biggest struggle for Assignment 1 was figuring out the design and actually filling out the different pages with meaningful content. I found it difficult to plan out the structure of each page and decide what belonged where, especially since I wasn’t sure how to create a logical flow or what information was unnecessary.
+I also found that working with images and navigation within a page was particularly intimidating. Trying to create a page that allowed users to find the information they were looking for while also keeping the content organized and not overwhelming was a huge challenge. Each page risked becoming overloaded with information. On top of that, making it possible to jump between different sections without cluttering the page with too many links was tough.
+It was difficult to balance showing large amounts of information versus offering brief summaries or previews before diving into detail. In the end, I chose to cut a lot of information and instead included links at the top of each page that direct users to different parts of the content. I also made use of icons to visually represent and break up information in a way that makes the site easier to explore.
+
+Design Section
+This website was created as a portfolio to showcase my work and achievements so far. My design is focused on creating an intuitive and simple way to explore everything I’ve done. I want to strike a balance between being professional and relaxed, as the site should represent me personally while still appealing to those, I want to showcase it to.
+2a. User Interface (UI):
+The main elements of my UI design include:
+<li>	A navigation bar that is always present and consistent across all pages.</li>
+<li>	Icons for coding languages I am proficient in, acting as visual cues for my technical skills.</li>
+<li>	A white background paired with pastel colours, giving a clean, minimal look that highlights content without overwhelming it.</li>
+<li>	Rounded corners used throughout to create a friendly and relaxed feel.</li>
+<li>	Standard components like a header and footer, contributing to a well-organized and easy-to-navigate layout.</li>
+Although I haven’t finalized the typography yet, I’m aiming for a clean, modern font that works well with the soft pastel theme and ensures good readability.
+
+2b. User Experience (UX):
+Since this is a portfolio, accessibility and ease of navigation are my top priorities:
+<li>	Users should be able to browse smoothly, whether on desktop or mobile.</li>
+<li>	A sticky navigation bar allows quick access to different sections without having to scroll back up.</li>
+<li>	Clear contact options, making it easy for users to get in touch with me directly.</li>
+
+4. Reference Material and Inspirations
+One of my main inspirations is Adham Dannaway's website.
+What I like:
+<li>	The clean and simple layout.</li>
+<li>	Effective use of space and minimalism, keeping things uncluttered.</li>
+<li>	The homepage image that cleverly shifts between programming-focused and creative-focused visuals — a great way to represent a dual skill set.</li>
+What I don’t like:
+<li>	Some sections feel a bit too formal and robotic, which isn’t the vibe I’m going for. I want something more inviting and casual.</li>
+Although I haven’t chosen a final font yet, I’ve already put together a color palette that will define the site's visual style (attached in this document):
+<li>	Primary Colours:</li>
+<li>	Deep Teal: #0F5257</li>
+<li>	Pastel Blue: #8DA9C4</li>
+<li>	Warm Red: #AA4465</li>
+<li>	Accent and Background Colours:</li>
+<li>	Soft Cream: #FAF0CA</li>
+<li>	Light Cream: #FAF8D4</li>
+These colours are meant to create a calm and approachable vibe, which is ideal for a portfolio that aims to be both professional and welcoming.
+
+<li><img class="u-photo"
+src="../images/ColourPallete.png"
+width="250"
+height="250" 
+alt="Colour pallete i will use"
+/></li>
+The wireframes for my current bare bones html website is as follows 
+<li><img class="u-photo"
+src="../images/HomepageScreenshot.png"
+width="250"
+height="250" 
+alt="wireframe for homepage"
+/></li>
+
+<li><img class="u-photo"
+src="../images/BlogsScreenshot.png"
+width="250"
+height="250" 
+alt="wireframe for homepage"
+/></li>
+<li><img class="u-photo"
+src="../images/DesignScreenshot.png"
+width="250"
+height="250" 
+alt="wireframe for homepage"
+/></li>
+<li><img class="u-photo"
+src="../images/DevScreensShot.png"
+width="250"
+height="250" 
+alt="wireframe for homepage"
+/></li>
+
+</p>   
+
     </article>
 </body>
 <footer>
