--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -10,7 +10,7 @@
         <a href="../index.html">Index</a>
         <a href="../blogsfolder/blogs.html">Blogs</a>
         <a href="../designfolder/design.html">Design</a>
-        <a href="../devfolder/dev.html">Dev</a>
+        <a >Dev</a>
       <a href="../profilefolder/profile.html">Profile</a>
     </nav>
     <hr />
