everything until microformatting

--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The personal writtings sof ALi Raffee">
+    <meta name="author" content="Ali Raffee">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Ali Raffee's Portfolio" />
+    <meta property="og:type" content="website" />
     <title>Blog page</title>
 </head>
 <body>
@@ -17,11 +22,11 @@
       <hr />
      
     <h1>Blogs</h1>
-    <li><a href="#Blog1">blog 1</a></li>
-    <li><a href="#Blog2">blog 2</a></li>
-    <li><a href="#Blog3">blog 3</a></li>
-    <li><a href="#Blog4">blog 4</a></li>
-    <h2 id=Blog1>Blog 1</h2>
+    <li><a href="#Blog1">Reflections on the Internet, Information Overload, and Digital Models</a></li>
+    <li><a href="#Blog2">Website Structure, Design Concepts, and Interaction Reflections</a></li>
+    <li><a href="#Blog3">Building My Website Framework and Planning User Experience</a></li>
+    <li><a href="#Blog4">Wireframe Reflections and Design Development</a></li>
+    <h2 id=Blog1>Reflections on the Internet, Information Overload, and Digital Models</h2>
     <article>
     <p>
         Readings: The Library of Babel, by Jorge Luis Borges (1941); A revealing look at the dot-com bubble of 2000 — and how it shapes our lives today , by Brian McCullough;Flash And Its History On The Web
@@ -54,7 +59,7 @@
         I want to really delve deep into the coding intricacy of html, css and javascripts. However, my main goal is to focus on understanding what makes a good UI. I found that I always struggle to make simple and user-friendly UI when making games and hence want to focus on theories and practices to male Ui easily digestible, to enhance usability and engagement 
     </p>
     </article>
-    <h2 id=Blog2>Blog 2</h2>
+    <h2 id=Blog2>Website Structure, Design Concepts, and Interaction Reflections</h2>
     <article>
     <p>
         File Structure
@@ -116,7 +121,7 @@
             
     </p>
     </article>
-    <h2 id=Blog3>Blog 3</h2>
+    <h2 id=Blog3>Building My Website Framework and Planning User Experience</h2>
     <article>
     <p>
         This week I focused on building the bones of my website. I focused on folder structure, traversal between pages, the functionality of jump links and implementation of images and videos. I focused on the actual html “code” this week. I found it quite different from any other languages I have used, it felt like describing what I wanted to do instead of coding (writing lines of instructions). The learning curve was not steep due to the simplistic tags and functionality that I started with. For the future of my website, it seems that my issues will mainly in the actual design and not the code to pull it off. I felt this way as I spent a disproportionate amount of time on simple text layout.
@@ -130,7 +135,7 @@ My folder structured will compose of the folders for scripts, images, styles and
 
     </p>
     </article>
-    <h2 id=Blog4>Blog 4</h2>
+    <h2 id=Blog4>Wireframe Reflections and Design Development</h2>
     <article>
         <p>
             Looking back at the wireframes I originally created, it's clear that I was quite confused about good design practices and what I actually liked about other websites. My initial design was impractical because it didn’t even include a navigation bar . I relied on single links scattered vertically across the page to connect to other sections. Without setting a consistent structure for my website, it became difficult to navigate, and as a result, it lacked functionality.
