--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dev page</title>
+    <meta name="description" content="The projects of Ali Raffee">
+    <meta name="author" content="Ali Raffee">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Ali Raffee's Portfolio" />
+    <meta property="og:type" content="website" />
 </head>
 <body>
     <nav>
