--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>homepage</title>
-  </head>
-  <body>
+    <title>Ali Raffee | Digital Arts Engineer Portfolio</title>
+    <meta name="description" content="Welcome to Ali Raffee's portfolio — showcasing design, development, and creative projects.">
+    <meta name="author" content="Ali Raffee">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Ali Raffee's Portfolio" />
+    <meta property="og:type" content="website" />
+</head>
+<body class="h-card">
     <nav>
-      <a >Index</a>
-      <a href="blogsfolder/blogs.html">Blogs</a>
-      <a href="designfolder/design.html">Design</a>
-      <a href="devfolder/dev.html">Dev</a>
-      <a href="profilefolder/profile.html">Profile</a>
-
+        <a>Index</a>
+        <a href="blogsfolder/blogs.html">Blogs</a>
+        <a href="designfolder/design.html">Design</a>
+        <a href="devfolder/dev.html">Dev</a>
+        <a href="profilefolder/profile.html">Profile</a>
     </nav>
+
     <hr />
-    <h1>Hi im Ali</h1>
+
+    <h1 class="p-name">Hi, I'm Ali</h1>
     <h2>I'm a <em>Digital Arts Engineer</em></h2>
-    <img class="u-photo"
-      src="images/ali.jpeg"
-      width="250"
-      height="250" 
-      alt="sketch of Ali"
-    />
-  </body>
-  
-  <footer>
-    <hr />
-    <em><small> alulu studios 2025</small> </em>
-</footer>
+    <img class="u-photo" src="images/ali.jpeg" width="250" height="250" alt="Sketch of Ali" />
+    <p class="p-summary">I create engaging and immersive digital experiences combining art, design, and technology.</p>
+
+    <footer>
+        <hr />
+        <em><small>Alulu Studios 2025</small></em>
+    </footer>
+</body>
 </html>
