GENERAL UPDTES TO TEXT

--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dev page</title>
-    <meta name="description" content="The projects of Ali Raffee">
+    <title>Ali Raffee | Projects and Dev Work</title>
+    <meta name="description" content="The projects and game development work of Ali Raffee.">
     <meta name="author" content="Ali Raffee">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
@@ -15,48 +15,40 @@
         <a href="../index.html">Index</a>
         <a href="../blogsfolder/blogs.html">Blogs</a>
         <a href="../designfolder/design.html">Design</a>
-        <a >Dev</a>
-      <a href="../profilefolder/profile.html">Profile</a>
+        <a>Dev</a>
+        <a href="../profilefolder/profile.html">Profile</a>
     </nav>
-    <hr />
-    <h1>Dev</h1>
-    <li><a href="#Game1">Egyptian game</a></li>
-    <li><a href="#Game2">Helicopter game</a></li>
-    <li><a href="#Game3">Active Ragdoll</a></li>
 
-    <h2 id=Game1>Egyptian game</h2>
-    <img
-    src="images/Egyptian.jpeg"
-    width="250"
-    height="250" 
-    alt="Egyptian game"
-  />    
-  <p>
-    The Egyptian game is a narrative puzzle game where the player is a historian who is trapped in a book and interrupts the resurrections of the god Osiris. The player must journey to recover the body parts and continue the resurrections to escape the book and restore History.
-</p>
-    <h2 id=Game2>Helicopter game</h2>
-    
-    <img
-    src="images/helicpoter.jpeg"
-    width="250"
-    height="250" 
-    alt="Helicopter game"
-  />    
-    <p>
-            The helicopter game is a simple game that is played by pressing the space bar to make the helicopter go up and releasing the space bar to make the helicopter go down. The objective of the game is to put out buildings that are on fire. The game  ends of 3 buiildings burn down.
-        </p>
-   <h2 id=Game3>Active Ragdoll</h2>
-    <img
-    src="images/ragdoll.jpeg"
-    width="250"
-    height="250"
-    alt="Active Ragdoll"
-    />
-    <p>
-        This is a prototype of a active ragdolll. i explored the physiscs and usual whymsical nature that comes with active ragdoll games. i was particularly inspired by the game  <a href="https://store.steampowered.com/app/2383860/Octodad_Student_Edition/" target="_blank">Octodad: Dadliest Catch</a>.
+    <hr />
+
+    <h1>Dev</h1>
+    <ul>
+        <li><a href="#Game1">Egyptian game</a></li>
+        <li><a href="#Game2">Helicopter game</a></li>
+        <li><a href="#Game3">Active Ragdoll</a></li>
+    </ul>
+
+    <article class="h-entry">
+        <h2 id="Game1" class="p-name">Egyptian Game</h2>
+        <img class="u-photo" src="images/Egyptian.jpeg" width="250" height="250" alt="Egyptian game">
+        <p class="e-content">The Egyptian game is a narrative puzzle game...</p>
+    </article>
+
+    <article class="h-entry">
+        <h2 id="Game2" class="p-name">Helicopter Game</h2>
+        <img class="u-photo" src="images/helicpoter.jpeg" width="250" height="250" alt="Helicopter game">
+        <p class="e-content">The helicopter game is a simple game...</p>
+    </article>
+
+    <article class="h-entry">
+        <h2 id="Game3" class="p-name">Active Ragdoll</h2>
+        <img class="u-photo" src="images/ragdoll.jpeg" width="250" height="250" alt="Active Ragdoll">
+        <p class="e-content">This is a prototype inspired by <a href="https://store.steampowered.com/app/2383860/Octodad_Student_Edition/" target="_blank">Octodad</a>.</p>
+    </article>
+
+    <footer>
+        <hr />
+        <em><small>Alulu Studios 2025</small></em>
+    </footer>
 </body>
-<footer>
-  <hr />
-  <em><small> alulu studios 2025</small> </em>
-</footer>
 </html>
