--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 class="p-name">Hi, I'm Ali</h1>
     <h2>I'm a <em>Digital Arts Engineer</em></h2>
     <img class="u-photo" src="images/ali.jpeg" width="250" height="250" alt="Sketch of Ali" />
-    <p class="p-summary">I create engaging and immersive digital experiences combining art, design, and technology.</p>
+    <p class="p-summary">I create engaging and immersive digital experiences combining art, design, and technology. I focus on coding and general electronic fixtures. I find my best work relates to coding the spine of mechanics or key features.</p>
 
     <footer>
         <hr />
