--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -3,35 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>profile page</title>
-    <meta name="description" content="The psonal profile Ali Raffee, including contact information">
+    <title>Ali Raffee | Profile</title>
+    <meta name="description" content="The personal profile of Ali Raffee, including contact information.">
     <meta name="author" content="Ali Raffee">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
 </head>
-<body>
+<body class="h-card">
     <nav>
         <a href="../index.html">Index</a>
         <a href="../blogsfolder/blogs.html">Blogs</a>
         <a href="../designfolder/design.html">Design</a>
         <a href="../devfolder/dev.html">Dev</a>
-      <a >Profile</a>
+        <a>Profile</a>
     </nav>
+
     <hr />
-    <h1>Profile</h1>
-    <h2 class="h-card p-name">Ali Raffee</h2>
-    <img class="u-photo"
-      src="../images/ali.jpeg"
-      width="250"
-      height="250" 
-      alt="sketch of Ali"
-    />
-   
-    <p class="p-summary">
-        I am a Digital Arts Engineer who is passionate about creating interactive experiences that are engaging and immersive. I have a background in engineering, computer science and digital arts, which allows me to create projects that are both technically sound and visually appealing. I am always looking for new challenges and opportunities to learn and grow as a developer and designer.I am currently in my last year of study studying  at the University of Witwatersrand  .
-    </p>
-    <h2>Skills</h2>     
+
+    <h1 class="p-name">Ali Raffee</h1>
+    <img class="u-photo" src="../images/ali.jpeg" width="250" height="250" alt="Sketch of Ali">
+
+    <p class="p-summary">I am a currently a third year Digital Arts Engineer. This means I have experience in both electrical engineering concepts and game design. I find myself drawn to coding weird and wacky character controllers. </p>
+
+    <h2>Skills</h2>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -41,11 +36,10 @@
         <li>Unity</li>
         <li>Blender</li>
     </ul>
-  
-    
-    </body>
+
     <footer>
-      <hr />
-      <em><small> alulu studios 2025</small> </em>
-  </footer>
+        <hr />
+        <em><small>Alulu Studios 2025</small></em>
+    </footer>
+</body>
 </html>
