completetd bulk of dev

--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -30,20 +30,22 @@
 
     <article class="h-entry">
         <h2 id="Game1" class="p-name">Egyptian Game</h2>
-        <img class="u-photo" src="images/Egyptian.jpeg" width="250" height="250" alt="Egyptian game">
-        <p class="e-content">The Egyptian game is a narrative puzzle game...</p>
+        <img class="u-photo" src="../images/egyptiangamehub.png" width="250" height="250" alt="Egyptian game">
+        <img class="u-photo" src="../images/egyptiangametomb.png" width="250" height="250" alt="Egyptian game">
+        <p class="e-content">The Egyptian game is a narrative puzzle game. The player is transported into a book where they disrupt the reincarnation of the god Osiris. The player must traverse egypt to recollect all the body parts to restart the reincarnation of the god and restore history.  </p>
     </article>
 
     <article class="h-entry">
         <h2 id="Game2" class="p-name">Helicopter Game</h2>
-        <img class="u-photo" src="images/helicpoter.jpeg" width="250" height="250" alt="Helicopter game">
-        <p class="e-content">The helicopter game is a simple game...</p>
+        <img class="u-photo" src="../images/helicopter.png" width="250" height="250" alt="Helicopter game">
+        <p class="e-content">This is a character controller focused traversal game. The player must collect water and disperse it over burning buildings. If three buildings burn down, the player loses. </p>
     </article>
 
     <article class="h-entry">
         <h2 id="Game3" class="p-name">Active Ragdoll</h2>
-        <img class="u-photo" src="images/ragdoll.jpeg" width="250" height="250" alt="Active Ragdoll">
-        <p class="e-content">This is a prototype inspired by <a href="https://store.steampowered.com/app/2383860/Octodad_Student_Edition/" target="_blank">Octodad</a>.</p>
+        <img class="u-photo" src="../images/octodad#1.png" width="250" height="250" alt="Active Ragdoll">
+        <img class="u-photo" src="../images/octodad#2.png" width="250" height="250" alt="Active Ragdoll">
+        <p class="e-content">This is a prototype inspired by <a href="https://store.steampowered.com/app/2383860/Octodad_Student_Edition/" target="_blank">Octodad</a>. It is an active ragdoll that is difficult to traverse the world woth. The players goal is to complete simple tasks with the character  </p>
     </article>
 
     <footer>
