--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <h1 class="p-name">Hi, I'm Ali</h1>
     <h2>I'm a <em>Digital Arts Engineer</em></h2>
     <img class="u-photo" src="images/ali.jpeg" width="250" height="250" alt="Sketch of Ali" />
-    <p class="p-summary">I create engaging and immersive digital experiences combining art, design, and technology. I focus on coding and general electronic fixtures. I find my best work relates to coding the spine of mechanics or key features.</p>
+    <p class="p-summary"><p>
+      I create engaging and immersive digital experiences that combine art, design, and technology. My work focuses on coding and building electronic fixtures, with a passion for making interactive systems that feel natural and polished. I enjoy working on the core mechanics and behind-the-scenes systems that bring projects to life, focusing on coding the spine of mechanics or key features. Whether it’s developing games, interactive websites, or unique installations, I aim to make projects that are both functional and creative. My goal is to create work that not only looks good but also works smoothly, providing users with seamless and memorable experiences.
+      </p>
+      
 
     <footer>
         <hr />
