fixed images and headings

--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -6,7 +6,7 @@
     <title>Ali Raffee | Projects and Dev Work</title>
     <meta name="description" content="The projects and game development work of Ali Raffee.">
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
 </head>
@@ -15,13 +15,13 @@
         <a href="../index.html">Index</a>
         <a href="../blogsfolder/blogs.html">Blogs</a>
         <a href="../designfolder/design.html">Design</a>
-        <a>Dev</a>
+        <a>Projects</a>
         <a href="../profilefolder/profile.html">Profile</a>
     </nav>
 
     <hr />
 
-    <h1>Dev</h1>
+    <h1>Projects</h1>
     <ul>
         <li><a href="#Game1">Egyptian game</a></li>
         <li><a href="#Game2">Helicopter game</a></li>
@@ -43,8 +43,8 @@
 
     <article class="h-entry">
         <h2 id="Game3" class="p-name">Active Ragdoll</h2>
-        <img class="u-photo" src="../images/octodad#1.png" width="250" height="250" alt="Active Ragdoll">
-        <img class="u-photo" src="../images/octodad#2.png" width="250" height="250" alt="Active Ragdoll">
+        <img class="u-photo" src="../images/octodad1.png" width="250" height="250" alt="Active Ragdoll">
+        <img class="u-photo" src="../images/octodad2.png" width="250" height="250" alt="Active Ragdoll">
         <p class="e-content">This is a prototype inspired by <a href="https://store.steampowered.com/app/2383860/Octodad_Student_Edition/" target="_blank">Octodad</a>. It is an active ragdoll that is difficult to traverse the world woth. The players goal is to complete simple tasks with the character  </p>
     </article>
 
