--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ali Raffee | Digital Arts Engineer Portfolio</title>
     <meta name="description" content="Welcome to Ali Raffee's portfolio — showcasing design, development, and creative projects.">
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
 </head>
@@ -15,7 +15,7 @@
         <a>Index</a>
         <a href="blogsfolder/blogs.html">Blogs</a>
         <a href="designfolder/design.html">Design</a>
-        <a href="devfolder/dev.html">Dev</a>
+        <a href="devfolder/dev.html">Projects</a>
         <a href="profilefolder/profile.html">Profile</a>
     </nav>
 
