--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The personal writings of Ali Raffee">
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio">
     <meta property="og:type" content="website">
     <title>Blog page</title>
@@ -16,7 +16,7 @@
         <a href="../index.html">Index</a>
         <a>Blogs</a>
         <a href="../designfolder/design.html">Design</a>
-        <a href="../devfolder/dev.html">Dev</a>
+        <a href="../devfolder/dev.html">Projects</a>
         <a href="../profilefolder/profile.html">Profile</a>
     </nav>
     <hr>
