--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -6,7 +6,7 @@
     <title>Ali Raffee | Profile</title>
     <meta name="description" content="The personal profile of Ali Raffee, including contact information.">
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
 </head>
@@ -15,7 +15,7 @@
         <a href="../index.html">Index</a>
         <a href="../blogsfolder/blogs.html">Blogs</a>
         <a href="../designfolder/design.html">Design</a>
-        <a href="../devfolder/dev.html">Dev</a>
+        <a href="../devfolder/dev.html">Projects</a>
         <a>Profile</a>
     </nav>
 
