--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -24,7 +24,7 @@
     <h1 class="p-name">Ali Raffee</h1>
     <img class="u-photo" src="../images/ali.jpeg" width="250" height="250" alt="Sketch of Ali">
 
-    <p class="p-summary"><p>
+    <p class="p-summary">
       I am currently a third-year Digital Arts Engineer, which means I have experience in both electrical engineering concepts and game design. My work spans across coding, design, and electronics, allowing me to approach projects from both a creative and technical perspective. I’m especially drawn to coding weird and wacky character controllers, exploring how players interact with games and how movement can feel unique and fun. I enjoy experimenting with different ways to bring characters and systems to life, often focusing on the mechanics that make an experience feel dynamic and engaging. Whether it’s through code or design, I aim to create interactive work that is playful, functional, and innovative.
       </p>
       
