--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -7,8 +7,8 @@
     <meta name="description" content="The design process of Ali Raffee's portfolio.">
     <meta name="author" content="Ali Raffee">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Ali Raffee's Portfolio" />
-    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ali Raffee's Portfolio">
+    <meta property="og:type" content="website">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
     <a href="../profilefolder/profile.html">Profile</a>
 </nav>
 
-<hr />
+<hr>
 
 <h1 id="DesignTitle">Design</h1>
 
@@ -33,68 +33,109 @@
     </ul>
 </nav>
 
-<article class="h-entry">
-    <h2 id="FirstAttempt" class="p-name">First Attempt</h2>
+<h2 id="FirstAttempt" class="p-name">First attempt</h2>
+<article>
+<p>Looking back at the wireframes I originally created, it's clear that I was quite confused about good design practices and what I actually liked about other websites. My initial design was impractical because it didn’t even include a navigation bar. I relied on single links scattered vertically across the page to connect to other sections. Without setting a consistent structure for my website, it became difficult to navigate, and as a result, it lacked functionality.
+I wasn’t sure how to guide users through my site, so I added awkward columns at the bottom of the visible page as a poor attempt at navigation. At that stage, I didn’t yet understand the purpose of footers or how to use other visual cues that could look much cleaner and more intentional. For example, I could have used simple borders around the top and sides of the page to visually suggest scrolling, or even a transparent arrow that subtly fades downward as a gentle hint. I’ve since realized that most users naturally expect a page to be scrollable unless it's clearly shown otherwise, rather than assuming it's static.
+Another issue with my wireframes was that they included elements that weren’t actually HTML, because I wasn’t sure what should be handled with CSS, JavaScript, or HTML. This was simply due to a lack of experience at the time.
+The biggest struggle for Assignment 1 was figuring out the design and actually filling out the different pages with meaningful content. I found it difficult to plan out the structure of each page and decide what belonged where, especially since I wasn’t sure how to create a logical flow or what information was unnecessary.
+I also found that working with images and navigation within a page was particularly intimidating. Trying to create a page that allowed users to find the information they were looking for while also keeping the content organized and not overwhelming was a huge challenge. Each page risked becoming overloaded with information. On top of that, making it possible to jump between different sections without cluttering the page with too many links was tough.
+It was difficult to balance showing large amounts of information versus offering brief summaries or previews before diving into detail. In the end, I chose to cut a lot of information and instead included links at the top of each page that direct users to different parts of the content. I also made use of icons to visually represent and break up information in a way that makes the site easier to explore.</p>
 
-    <p>Looking back at the wireframes I originally created, it's clear that I was quite confused about good design practices and what I actually liked about other websites. My initial design was impractical because it didn’t even include a navigation bar. I relied on single links scattered vertically across the page to connect to other sections. Without setting a consistent structure for my website, it became difficult to navigate, and as a result, it lacked functionality.</p>
+<p>Design Section  
+This website was created as a portfolio to showcase my work and achievements so far. My design is focused on creating an intuitive and simple way to explore everything I’ve done. I want to strike a balance between being professional and relaxed, as the site should represent me personally while still appealing to those, I want to showcase it to.</p>
 
-    <p>I wasn’t sure how to guide users through my site, so I added awkward columns at the bottom of the visible page as a poor attempt at navigation. At that stage, I didn’t yet understand the purpose of footers or how to use other visual cues that could look much cleaner and more intentional. For example, I could have used simple borders around the top and sides of the page to visually suggest scrolling, or even a transparent arrow that subtly fades downward as a gentle hint. I’ve since realized that most users naturally expect a page to be scrollable unless it's clearly shown otherwise, rather than assuming it's static.</p>
+<p>2a. User Interface (UI):</p>
+<ul>
+    <li>A navigation bar that is always present and consistent across all pages.</li>
+    <li>Icons for coding languages I am proficient in, acting as visual cues for my technical skills.</li>
+    <li>A white background paired with pastel colours, giving a clean, minimal look that highlights content without overwhelming it.</li>
+    <li>Rounded corners used throughout to create a friendly and relaxed feel.</li>
+    <li>Standard components like a header and footer, contributing to a well-organized and easy-to-navigate layout.</li>
+</ul>
+<p>Although I haven’t finalized the typography yet, I’m aiming for a clean, modern font that works well with the soft pastel theme and ensures good readability.</p>
 
-    <p>Another issue with my wireframes was that they included elements that weren’t actually HTML, because I wasn’t sure what should be handled with CSS, JavaScript, or HTML. This was simply due to a lack of experience at the time. The biggest struggle for Assignment 1 was figuring out the design and actually filling out the different pages with meaningful content. I found it difficult to plan out the structure of each page and decide what belonged where, especially since I wasn’t sure how to create a logical flow or what information was unnecessary.</p>
+<p>2b. User Experience (UX):</p>
+<ul>
+    <li>Users should be able to browse smoothly, whether on desktop or mobile.</li>
+    <li>A sticky navigation bar allows quick access to different sections without having to scroll back up.</li>
+    <li>Clear contact options, making it easy for users to get in touch with me directly.</li>
+</ul>
 
-    <p>I also found that working with images and navigation within a page was particularly intimidating. Trying to create a page that allowed users to find the information they were looking for while also keeping the content organized and not overwhelming was a huge challenge. Each page risked becoming overloaded with information. On top of that, making it possible to jump between different sections without cluttering the page with too many links was tough.</p>
+<p>4. Reference Material and Inspirations  
+One of my main inspirations is Adham Dannaway's website.</p>
 
-    <p>It was difficult to balance showing large amounts of information versus offering brief summaries or previews before diving into detail. In the end, I chose to cut a lot of information and instead included links at the top of each page that direct users to different parts of the content. I also made use of icons to visually represent and break up information in a way that makes the site easier to explore.</p>
+<p>What I like:</p>
+<ul>
+    <li>The clean and simple layout.</li>
+    <li>Effective use of space and minimalism, keeping things uncluttered.</li>
+    <li>The homepage image that cleverly shifts between programming-focused and creative-focused visuals — a great way to represent a dual skill set.</li>
+</ul>
 
-    <h3>Design Section</h3>
-    <p>This website was created as a portfolio to showcase my work and achievements so far. My design is focused on creating an intuitive and simple way to explore everything I’ve done. I want to strike a balance between being professional and relaxed, as the site should represent me personally while still appealing to those I want to showcase it to.</p>
+<p>What I don’t like:</p>
+<ul>
+    <li>Some sections feel a bit too formal and robotic, which isn’t the vibe I’m going for. I want something more inviting and casual.</li>
+</ul>
 
-    <h4>2a. User Interface (UI):</h4>
-    <ul>
-        <li>A navigation bar that is always present and consistent across all pages.</li>
-        <li>Icons for coding languages I am proficient in, acting as visual cues for my technical skills.</li>
-        <li>A white background paired with pastel colours, giving a clean, minimal look that highlights content without overwhelming it.</li>
-        <li>Rounded corners used throughout to create a friendly and relaxed feel.</li>
-        <li>Standard components like a header and footer, contributing to a well-organized and easy-to-navigate layout.</li>
-    </ul>
+<p>Although I haven’t chosen a final font yet, I’ve already put together a color palette that will define the site's visual style:</p>
+<ul>
+    <li>Primary Colours: Deep Teal: #0F5257, Pastel Blue: #8DA9C4, Warm Red: #AA4465</li>
+    <li>Accent and Background Colours: Soft Cream: #FAF0CA, Light Cream: #FAF8D4</li>
+</ul>
 
-    <h4>2b. User Experience (UX):</h4>
-    <ul>
-        <li>Users should be able to browse smoothly, whether on desktop or mobile.</li>
-        <li>A sticky navigation bar allows quick access to different sections without having to scroll back up.</li>
-        <li>Clear contact options, making it easy for users to get in touch with me directly.</li>
-    </ul>
+<li><img class="u-photo" src="../images/ColourPallete.png" width="250" height="250" alt="Colour palette I will use"></li>
+<li><img class="u-photo" src="../images/HomepageScreenshot.png" width="250" height="250" alt="Wireframe for homepage"></li>
+<li><img class="u-photo" src="../images/BlogsScreenshot.png" width="250" height="250" alt="Wireframe for blogs"></li>
+<li><img class="u-photo" src="../images/DesignScreenshot.png" width="250" height="250" alt="Wireframe for design"></li>
+<li><img class="u-photo" src="../images/DevScreensShot.png" width="250" height="250" alt="Wireframe for dev"></li>
 
-    <h4>4. Reference Material and Inspirations</h4>
-    <p>One of my main inspirations is Adham Dannaway's website.</p>
-    <p>What I like:</p>
-    <ul>
-        <li>The clean and simple layout.</li>
-        <li>Effective use of space and minimalism, keeping things uncluttered.</li>
-        <li>The homepage image that cleverly shifts between programming-focused and creative-focused visuals — a great way to represent a dual skill set.</li>
-    </ul>
-    <p>What I don’t like:</p>
-    <ul>
-        <li>Some sections feel a bit too formal and robotic, which isn’t the vibe I’m going for. I want something more inviting and casual.</li>
-    </ul>
+<a href="#DesignTitle">Back to top</a>
 
-    <p>Although I haven’t chosen a final font yet, I’ve already put together a color palette that will define the site's visual style:</p>
-    <ul>
-        <li>Primary Colours: Deep Teal (#0F5257), Pastel Blue (#8DA9C4), Warm Red (#AA4465).</li>
-        <li>Accent and Background Colours: Soft Cream (#FAF0CA), Light Cream (#FAF8D4).</li>
-    </ul>
-
-    <img class="u-photo" src="../images/ColourPallete.png" width="250" height="250" alt="Colour palette I will use">
-
-    <h3>Wireframes</h3>
-    <ul>
-        <li><img class="u-photo" src="../images/HomepageScreenshot.png" width="250" height="250" alt="Homepage wireframe"></li>
-        <li><img class="u-photo" src="../images/BlogsScreenshot.png" width="250" height="250" alt="Blogs wireframe"></li>
-        <li><img class="u-photo" src="../images/DesignScreenshot.png" width="250" height="250" alt="Design wireframe"></li>
-        <li><img class="u-photo" src="../images/DevScreensShot.png" width="250" height="250" alt="Dev wireframe"></li>
-    </ul>
-    <p><a href="#DesignTitle">Back to top</a></p>
 </article>
+<h2 id="Improvement" class="p-name">Improvement in My New Wireframes</h2>
+<article>
+<p>Comparing those early wireframes with my current designs, I can see a significant improvement in how I approach both structure and user experience. My new wireframes are much more organized, featuring clearly defined sections and consistent layouts across pages. Each page now has a specific purpose and is properly titled, helping users know where they are and what to expect. The pages I now include are:</p>
+<ul>
+    <li><strong>Homepage:</strong> Introduction to who I am, with clear text about me and navigation to other sections.</li>
+    <li><strong>Blogs Page:</strong> A space to share blog posts, with placeholders for text and blog titles (e.g., Blog 1, Blog 2).</li>
+    <li><strong>Design Page:</strong> Dedicated to showcasing my design work, including space for text descriptions and images.</li>
+    <li><strong>Projects Page:</strong> A gallery-style page to highlight key projects, including descriptions and supporting visuals.</li>
+    <li><strong>Profile Page:</strong> Focused on my background, achievements, and personal statement, with additional text and images.</li>
+</ul>
+<p>This new structure demonstrates a clearer understanding of content mapping and user flow. Each page connects logically to the others, and I now have a navigation bar that is consistent across all pages — something I had completely missed in my early wireframes. The navigation bar makes it easy for users to move between pages without frustration.</p>
+</article>
+
+<h3>Design and User Experience (UX) Considerations</h3>
+<article>
+<p>In redesigning the wireframes, I focused heavily on improving the user experience (UX). I considered how users would move through the site, ensuring that each page is easy to access and that information is presented in a way that doesn't overwhelm the reader. I also included space for visual elements like images and icons, which I previously found intimidating but now recognize as essential for breaking up text and making the site visually engaging.</p>
+<p>By creating more structured wireframes, I also realized the importance of balancing functionality with creativity. My goal has always been to create a portfolio that is both professional and reflective of my personal style, and I believe my current designs are much closer to achieving that balance.</p>
+</article>
+
+<h3>Conclusion</h3>
+<p>Overall, my current wireframes show that I have developed a much better understanding of web design principles, including usability, layout consistency, and navigation. I moved from confusing, scattered designs to a thoughtful and user-friendly structure that better serves the purpose of my portfolio. This process has taught me the importance of planning, consistency, and focusing on the user experience when designing a website. Moving forward, I will continue to refine these wireframes as I translate them into a fully functional site.</p>
+
+<a href="#DesignTitle">Back to top</a>
+
+<h2 id="Current" class="p-name">Current Wireframes</h2>
+<ul> 
+    <li><img class="u-photo" src="../images/currenthomepage.jpg" width="250" height="250" alt="current wireframe for homepage"></li>
+    <li><img class="u-photo" src="../images/currentblogs.jpg" width="250" height="250" alt="current wireframe for blogs"></li>
+    <li><img class="u-photo" src="../images/currentdesign.jpg" width="250" height="250" alt="current wireframe for design"></li>
+    <li><img class="u-photo" src="../images/currentdev.jpg" width="250" height="250" alt="current wireframe for dev"></li>
+    <li><img class="u-photo" src="../images/currentprofile.jpg" width="250" height="250" alt="current wireframe for profile"></li>
+</ul>
+
+<a href="#DesignTitle">Back to top</a>
+
+<h2 id="Reflection" class="p-name">Reflection on My Current Wireframes</h2>
+<article>
+<p>Looking at my current wireframes, I can see a significant improvement in my design skills and understanding of web development principles. The wireframes are much more organized and structured, with clear sections and consistent layouts across pages. I now have a navigation bar that is present on all pages, making it easy for users to move between different sections of the site.</p>
+<p>I have also improved the user experience by including space for visual elements like images and icons, which help break up text and make the site more engaging. I have focused on creating a balance between functionality and creativity, ensuring that the site is both professional and reflective of my personal style.</p>
+<p>Overall, I am pleased with the progress I have made in designing my portfolio website. I have learned a lot about web design principles and user experience, and I am excited to continue refining my wireframes as I work towards creating a fully functional site.</p>
+<p>However, I do see room to improve. The contrast I have is quite low. I'm not currently sure how to blend having colours that are similar against colours that are different whilst making it still look appealing. I think I may have chosen too many colours as a first attempt at using colours. I will now try to use fewer colours and have a white background so most colours can stand out.</p>
+</article>
+
+<a href="#DesignTitle">Back to top</a>
 
 <footer>
     <hr>
