--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -28,6 +28,10 @@
         <li><a href="#Blog3">Building My Website Framework and Planning User Experience</a></li>
         <li><a href="#Blog4">Wireframe Reflections and Design Development</a></li>
     </ul>
+    <h1>Essays</h1>
+    <ul>
+        <li>Nothing yet.</li>
+    </ul>
 
     <h2 id="Blog1" class="h-entry p-name">Reflections on the Internet, Information Overload, and Digital Models</h2>
     <article>
