--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -82,13 +82,39 @@ One of my main inspirations is Adham Dannaway's website.</p>
     <li>Primary Colours: Deep Teal: #0F5257, Pastel Blue: #8DA9C4, Warm Red: #AA4465</li>
     <li>Accent and Background Colours: Soft Cream: #FAF0CA, Light Cream: #FAF8D4</li>
 </ul>
-
-<li><img class="u-photo" src="../images/ColourPallete.png" width="250" height="250" alt="Colour palette I will use"></li>
-<li><img class="u-photo" src="../images/HomepageScreenshot.png" width="250" height="250" alt="Wireframe for homepage"></li>
-<li><img class="u-photo" src="../images/BlogsScreenshot.png" width="250" height="250" alt="Wireframe for blogs"></li>
-<li><img class="u-photo" src="../images/DesignScreenshot.png" width="250" height="250" alt="Wireframe for design"></li>
-<li><img class="u-photo" src="../images/DevScreensShot.png" width="250" height="250" alt="Wireframe for dev"></li>
-
+<ul>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/ColourPallete.png" width="250" height="250" alt="Colour palette I will use">
+        <figcaption>Colour palette I will use for the website design.</figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/HomepageScreenshot.png" width="250" height="250" alt="Wireframe for homepage">
+        <figcaption>Wireframe layout for the homepage of the site. A simple layout that serves as just an Introduction.</figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/BlogsScreenshot.png" width="250" height="250" alt="Wireframe for blogs">
+        <figcaption>Wireframe showing how the blogs section will be structured.</figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/DesignScreenshot.png" width="250" height="250" alt="Wireframe for design">
+        <figcaption>Wireframe for the design showcase page. This page focuses on how I designed the website.</figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/DevScreensShot.png" width="250" height="250" alt="Wireframe for dev">
+        <figcaption>Wireframe for the portfolio section, where I focus on what projects I have worked on.</figcaption>
+      </figure>
+    </li>
+  </ul>
+  
 <a href="#DesignTitle">Back to top</a>
 
 </article>
@@ -97,7 +123,7 @@ One of my main inspirations is Adham Dannaway's website.</p>
 <p>Comparing those early wireframes with my current designs, I can see a significant improvement in how I approach both structure and user experience. My new wireframes are much more organized, featuring clearly defined sections and consistent layouts across pages. Each page now has a specific purpose and is properly titled, helping users know where they are and what to expect. The pages I now include are:</p>
 <ul>
     <li><strong>Homepage:</strong> Introduction to who I am, with clear text about me and navigation to other sections.</li>
-    <li><strong>Blogs Page:</strong> A space to share blog posts, with placeholders for text and blog titles (e.g., Blog 1, Blog 2).</li>
+    <li><strong>Blogs Page:</strong> A space to share blog posts, with placeholders for text and blog titles.</li>
     <li><strong>Design Page:</strong> Dedicated to showcasing my design work, including space for text descriptions and images.</li>
     <li><strong>Projects Page:</strong> A gallery-style page to highlight key projects, including descriptions and supporting visuals.</li>
     <li><strong>Profile Page:</strong> Focused on my background, achievements, and personal statement, with additional text and images.</li>
@@ -118,12 +144,38 @@ One of my main inspirations is Adham Dannaway's website.</p>
 
 <h2 id="Current" class="p-name">Current Wireframes</h2>
 <ul> 
-    <li><img class="u-photo" src="../images/currenthomepage.jpg" width="250" height="250" alt="current wireframe for homepage"></li>
-    <li><img class="u-photo" src="../images/currentblogs.jpg" width="250" height="250" alt="current wireframe for blogs"></li>
-    <li><img class="u-photo" src="../images/currentdesign.jpg" width="250" height="250" alt="current wireframe for design"></li>
-    <li><img class="u-photo" src="../images/currentdev.jpg" width="250" height="250" alt="current wireframe for dev"></li>
-    <li><img class="u-photo" src="../images/currentprofile.jpg" width="250" height="250" alt="current wireframe for profile"></li>
-</ul>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/currenthomepage.jpg" width="250" height="250" alt="Current wireframe for homepage">
+        <figcaption>Current wireframe layout for the homepage. I will have an image of myself that will be half drawn and half a real image. This willl serve to show both my engineering and digital arts specialties. When hovered over, that side wil expand ie: the image will be completely drawn.  </figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/currentblogs.jpg" width="250" height="250" alt="Current wireframe for blogs">
+        <figcaption>Current wireframe design for the blogs section. When a blog title is selected on the left, the text will be injected into the right blog</figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/currentdesign.jpg" width="250" height="250" alt="Current wireframe for design">
+        <figcaption>Current wireframe concept for the design page.</figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/currentrpoject.jpg" width="250" height="250" alt="Current wireframe for dev">
+        <figcaption>Current wireframe for the development portfolio section. The images will show the cover image of my project and the name. When hovered over more text and information will be presented</figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img class="u-photo" src="../images/currentprofile.jpg" width="250" height="250" alt="Current wireframe for profile">
+        <figcaption>Current wireframe layout for the profile page.</figcaption>
+      </figure>
+    </li>
+  </ul>
+  
 
 <a href="#DesignTitle">Back to top</a>
 
